<resources>
    <string name="app_name">AtYourService</string>


    <string name="action_sign_in_short">تسجيل</string>
    <string name="email">ايميل</string>
    <string name="minimum_password">كلمة السر قصيرة جدا, ادخل 6 رموز!</string>
    <string name="auth_failed">تأكد من الايميل و كلمة السر او انشىء حساب.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">تسجيل الدخول</string>
    <string name="hint_email">بريد إلكتروني</string>
    <string name="hint_password">كلمة السر</string>
    <string name="hint_name">اسمك الكامل</string>
    <string name="btn_login">دخول</string>
    <string name="btn_link_to_register">إنشاء حساب ؟</string>
    <string name="btn_link_to_login">تسجيل دخول ؟</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">هل نسيت كلمة السر ؟</string>
    <string name="btn_reset_password">إعادة تعيين كلمة المرور</string>
    <string name="btn_back"><![CDATA[>>رجوع]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">هل نسيت كلمة السر ؟</string>
    <string name="forgot_password_msg">تحتاج فقط إلى معرفة البريد الإلكتروني المسجل لإرسال إرشادات إعادة تعيين كلمة المرور </string>

    //HomeActivity
    <string name="main_title">Main Screen</string>
    <string name="main_menu_flag">خدمة العلم</string>
    <string name="main_menu_note">Sticky Note</string>
    <string name="main_menu_finance">Finances</string>
    <string name="main_menu_activity">Activities</string>
    <string name="main_menu_tracker">Tracker</string>
    <string name="main_menu_social">Social</string>
    <string name="main_menu_random">Ranomizer</string>
    <string name="main_menu_alert">Alerts</string>
    <string name="main_menu_profile">Profile</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_support">Support</string>
    <string name="main_menu_close">Close App</string>


    //PendingService
    <string name="successReqTitle">تنبيه</string>
    <string name="successReqBody">لقد تم تقديم طلبك بنجاح</string>
    <string name="btnSuccessReq">حسنا</string>


</resources>