<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/boardershape">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/tool"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@color/orange"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="18dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff"
                android:text="@string/successReqTitle"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/successReqBody"
        android:layout_centerVertical="true"
        android:layout_below="@id/tool"
        android:textAlignment="center"
        android:textSize="19dp"
        android:textColor="@color/orange"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:textColor="#ffffff"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:layout_below="@+id/txtBody"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:text="@string/btnSuccessReq"
        android:background="@drawable/shape2"
        />

</RelativeLayout>