<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:id="@+id/img"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_lock_black_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailf"
                android:textColorHint="#ffffff"
                android:layout_below="@id/img">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:backgroundTint="#ffffff"
                    android:drawableTint="#ffffff"
                    android:textSize="24dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_email_black_24dp"
                    android:paddingRight="5dp"
                    android:inputType="textEmailAddress"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passf"
                android:textColorHint="#ffffff"
                android:layout_below="@id/emailf">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="24dp"
                    android:hint="@string/hint_password"
                    android:drawableRight="@drawable/ic_lock_black_24dp"
                    android:drawableTint="#ffffff"
                    android:drawablePadding="10dp"
                    android:paddingRight="5dp"
                    android:backgroundTint="#ffffff"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passf"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dip"
                android:layout_marginRight="15dp"
                android:background="@color/black"
                android:text="@string/btn_login"
                android:textColor="@color/orange"
                android:textSize="24dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:weightSum="2"
                android:layout_below="@id/btn_login"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:layout_marginRight="7dp"
                    android:layout_marginLeft="15dp"
                    android:textStyle="bold"
                    android:background="@color/black"
                    android:textColor="@color/orange"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="7dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/btn_forgot_password"
                    android:background="@color/black"
                    android:layout_marginRight="15dp"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>