<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/lay">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_lock_black_24dp"
                android:id="@+id/img"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailf"
                android:textColorHint="#ffffff"
                android:layout_below="@id/img">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="بريد إلكتروني"
                    android:textColorHint="#ffffff"
                    android:textSize="24dp"
                    android:padding="5dp"
                    android:drawableRight="@drawable/ic_email_black_24dp"
                    android:drawableTint="#ffffff"
                    android:drawablePadding="5dp"
                    android:backgroundTint="#ffffff"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullnamef"
                android:textColorHint="#ffffff"
                android:layout_below="@+id/emailf">

                <EditText
                    android:id="@+id/fullNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="الاسم الثلاثي"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textColorHint="#ffffff"
                    android:textSize="24dp"
                    android:padding="5dp"
                    android:drawableRight="@drawable/ic_lock_black_24dp"
                    android:drawableTint="#ffffff"
                    android:drawablePadding="5dp"
                    android:backgroundTint="#ffffff"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passf"
                android:textColorHint="#ffffff"
                android:layout_below="@id/fullnamef">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:textColorHint="#ffffff"
                    android:textSize="24dp"
                    android:padding="5dp"
                    android:drawableRight="@drawable/ic_lock_black_24dp"
                    android:drawableTint="#ffffff"
                    android:drawablePadding="5dp"
                    android:backgroundTint="#ffffff"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#797578"
                    tools:ignore="InvalidImeActionId" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/balancef"
                android:textColorHint="#ffffff"
                android:layout_below="@id/passf">

                <EditText
                    android:id="@+id/BallanceField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="الرصيد"
                    android:textColorHint="#ffffff"
                    android:textSize="24dp"
                    android:padding="5dp"
                    android:drawableRight="@drawable/ic_person_black_24dp"
                    android:drawableTint="#ffffff"
                    android:drawablePadding="5dp"
                    android:backgroundTint="#ffffff"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ffffff" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:text="إنشاء حساب"
                android:textSize="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:layout_below="@id/balancef"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:weightSum="2"
                android:layout_below="@id/sign_up_button"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/orange"
                    android:layout_marginRight="7dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:textSize="16dp"
                    android:layout_marginLeft="7dp"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:textStyle="bold"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/orange"
                    android:layout_below="@id/sign_up_button"/>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>